--- a/index.html
+++ b/index.html
@@ -1,17 +1,132 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>SampleJam</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
       <!-- Do not add `script` tags-->
+      <script src="//use.edgefonts.net/belgrano;megrim.js"></script>
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <div>
+        <nav class="navbar">
+          <div class="nav-content">
+            <h1 class="nav-title">Sample Jam</h1>
+          </div>
+        </nav>
+        <div class="nav-left">
+          <div id="Pascaal" class="producer-div">
+            <p id="Pascaal-text" class="producer selected">Pascaal</p>
+          </div>
+          <div id="PointPoint" class="producer-div">
+            <p id="PointPoint-text" class="producer">PointPoint</p>
+          </div>
+          <div id="Tennyson" class="producer-div">
+            <p id="Tennyson-text" class="producer">Tennyson</p>
+          </div>
+        </div>
+        <main>
+          <div class="player">
+            <h1 id="producer-title">Pascaal Samples</h1>
+            <div class="block">
+              <select class="select">
+                <option class="option" value="Loop 1">Loop 1</option>
+                <option class="option" value="Loop 2">Loop 2</option>
+                <option class="option" value="Loop 3">Loop 3</option>
+              </select>
+            </div>
+            <div class="block">
+              <label for="volume">Volume</label>
+              <input type="range" id="volume" name="volume"
+                     value="0.5" min="0" max="1" step="0.1">
+            </div>
+            <!-- <div class="block">
+              <label for="rate">Speed</label>
+              <input type="range" id="rate" name="rate"
+                     value="1" min="0.5" max="2" step="0.1">
+            </div> -->
+            <div class="block">
+              <label for="detune">Pitch</label>
+              <input type="range" id="detune" name="detune"
+                     value="0" min="-300" max="300" step="5">
+            </div>
+            <div class="block">
+              <button class="play-btn play">Play</button>
+            </div>
+              <!-- <div class="block">
+                <button class="stop-btn">Stop</button>
+              </div> -->
+            <div class="slider-container">
+              <div class="block">
+                <!-- <input
+                  id="typeinp"
+                  type="range"
+                  min="0" max="1"
+                  value={this.state.pointLoop.volume}
+                  onChange={setVolume}
+                  name="pointLoop"
+                  step="0.1"/>
+              </div>
+              <div class="block">
+                <div class="slider-label">
+                  <span>Speed</span>
+                </div>
+                <input
+                  id="pointLoopSpeed"
+                  type="range"
+                  min="0.3" max="2"
+                  value={this.state.pointLoop.rate}
+                  onChange={setRate}
+                  name="pointLoop"
+                  step="0.1"/>
+              </div>
+              <div class="block">
+                <div class="slider-label">
+                  <span>Pitch</span>
+                </div>
+                <input
+                  id="pointLoopPitch"
+                  type="range"
+                  min="0.3" max="2"
+                  value={this.state.pointLoop.pitch}
+                  onChange={setRate}
+                  name="pointLoop"
+                  step="0.1"/> -->
+              </div>
+            </div>
+            <div class="key-container">
+              <div class="key-div">
+                <span class="letter">D</span>
+                <img id="68" class="key" src='./public/images/key2.jpg' alt="D"/>
+              </div>
+              <div class="key-div">
+                <span class="letter">F</span>
+                <img id="70" class="key" src='./public/images/key2.jpg' alt="F"/>
+              </div>
+              <div class="key-div">
+                <span class="letter">G</span>
+                <img id="71" class="key" src='./public/images/key2.jpg' alt="G"/>
+              </div>
+              <div class="key-div">
+                <span class="letter">H</span>
+                <img id="72" class="key" src='./public/images/key2.jpg' alt="H"/>
+              </div>
+              <div class="key-div">
+                <span class="letter">J</span>
+                <img id="74" class="key" src='./public/images/key2.jpg' alt="J"/>
+              </div>
+              <div class="key-div">
+                <span class="letter">K</span>
+                <img id="75" class="key" src='./public/images/key2.jpg' alt="K"/>
+              </div>
+            </div>
+          </div>
+        </main>
+      </div>
     </body>
 </html>
