--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
             <div class="key-container">
               <div class="key-div">
                 <span class="letter">D</span>
-                <img id="68" class="key" src='public/images/key2.jpg' alt="D"/>
+                <img id="68" class="key" src='public/key2.jpg' alt="D"/>
               </div>
               <div class="key-div">
                 <span class="letter">F</span>
-                <img id="70" class="key" src='public/images/key2.jpg' alt="F"/>
+                <img id="70" class="key" src='public/key2.jpg' alt="F"/>
               </div>
               <div class="key-div">
                 <span class="letter">G</span>
-                <img id="71" class="key" src='public/images/key2.jpg' alt="G"/>
+                <img id="71" class="key" src='public/key2.jpg' alt="G"/>
               </div>
               <div class="key-div">
                 <span class="letter">H</span>
-                <img id="72" class="key" src='public/images/key2.jpg' alt="H"/>
+                <img id="72" class="key" src='public/key2.jpg' alt="H"/>
               </div>
               <div class="key-div">
                 <span class="letter">J</span>
-                <img id="74" class="key" src='public/images/key2.jpg' alt="J"/>
+                <img id="74" class="key" src='public/key2.jpg' alt="J"/>
               </div>
               <div class="key-div">
                 <span class="letter">K</span>
-                <img id="75" class="key" src='public/images/key2.jpg' alt="K"/>
+                <img id="75" class="key" src='public/key2.jpg' alt="K"/>
               </div>
             </div>
           </div>
