Add media queries, and click handlers for buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <main>
           <div class="player">
             <h1 id="producer-title">Oliver Samples</h1>
-            <div class="block">
+            <div class="block center-div">
               <select class="loops select">
                 <option class="option" value="Loop 1">Loop 1</option>
                 <option class="option" value="Loop 2">Loop 2</option>
@@ -58,7 +58,7 @@
               <input class="custom-range" type="range" id="detune" name="detune"
                      value="0" min="-300" max="300" step="5">
             </div>
-            <div class="block">
+            <div class="block center-div">
               <button class="play-btn play">Play</button>
             </div>
               <!-- <div class="block">
@@ -103,29 +103,33 @@
               </div>
             </div>
             <div class="key-container">
-              <div class="key-div">
-                <span class="letter">D</span>
-                <img id="68" class="key" src='public/Key3.png' alt="D"/>
+              <div class="key-row">
+                <div class="key-div">
+                  <span class="letter">D</span>
+                  <img id="68" class="key" src='public/Key3.png' alt="D"/>
+                </div>
+                <div class="key-div">
+                  <span class="letter">F</span>
+                  <img id="70" class="key" src='public/Key3.png' alt="F"/>
+                </div>
+                <div class="key-div">
+                  <span class="letter">G</span>
+                  <img id="71" class="key" src='public/Key3.png' alt="G"/>
+                </div>
               </div>
-              <div class="key-div">
-                <span class="letter">F</span>
-                <img id="70" class="key" src='public/Key3.png' alt="F"/>
-              </div>
-              <div class="key-div">
-                <span class="letter">G</span>
-                <img id="71" class="key" src='public/Key3.png' alt="G"/>
-              </div>
-              <div class="key-div">
-                <span class="letter">H</span>
-                <img id="72" class="key" src='public/Key3.png' alt="H"/>
-              </div>
-              <div class="key-div">
-                <span class="letter">J</span>
-                <img id="74" class="key" src='public/Key3.png' alt="J"/>
-              </div>
-              <div class="key-div">
-                <span class="letter">K</span>
-                <img id="75" class="key" src='public/Key3.png' alt="K"/>
+              <div class="key-row">
+                <div class="key-div">
+                  <span class="letter">H</span>
+                  <img id="72" class="key" src='public/Key3.png' alt="H"/>
+                </div>
+                <div class="key-div">
+                  <span class="letter">J</span>
+                  <img id="74" class="key" src='public/Key3.png' alt="J"/>
+                </div>
+                <div class="key-div">
+                  <span class="letter">K</span>
+                  <img id="75" class="key" src='public/Key3.png' alt="K"/>
+                </div>
               </div>
             </div>
           </div>
