Add background, slider adjusts all loops detune

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                      value="1" min="0.5" max="2" step="0.1">
             </div> -->
             <div class="block range">
-              <label for="detune">Pitch</label>
+              <label for="detune">Speed</label>
               <input class="custom-range" type="range" id="detune" name="detune"
-                     value="0" min="-300" max="300" step="5">
+                     value="0" min="-600" max="600" step="25">
             </div>
             <div class="block center-div">
               <button class="play-btn play">Play</button>
