Change keys for ergonomics, mix sounds

--- a/index.html
+++ b/index.html
@@ -105,30 +105,30 @@
             <div class="key-container">
               <div class="key-row">
                 <div class="key-div">
+                  <span class="letter">S</span>
+                  <img id="s" class="key" src='public/Key3.png' alt="D"/>
+                </div>
+                <div class="key-div">
                   <span class="letter">D</span>
-                  <img id="68" class="key" src='public/Key3.png' alt="D"/>
+                  <img id="d" class="key" src='public/Key3.png' alt="F"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">F</span>
-                  <img id="70" class="key" src='public/Key3.png' alt="F"/>
-                </div>
-                <div class="key-div">
-                  <span class="letter">G</span>
-                  <img id="71" class="key" src='public/Key3.png' alt="G"/>
+                  <img id="f" class="key" src='public/Key3.png' alt="G"/>
                 </div>
               </div>
               <div class="key-row">
                 <div class="key-div">
-                  <span class="letter">H</span>
-                  <img id="72" class="key" src='public/Key3.png' alt="H"/>
-                </div>
-                <div class="key-div">
                   <span class="letter">J</span>
-                  <img id="74" class="key" src='public/Key3.png' alt="J"/>
+                  <img id="j" class="key" src='public/Key3.png' alt="H"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">K</span>
-                  <img id="75" class="key" src='public/Key3.png' alt="K"/>
+                  <img id="k" class="key" src='public/Key3.png' alt="J"/>
+                </div>
+                <div class="key-div">
+                  <span class="letter">L</span>
+                  <img id="l" class="key" src='public/Key3.png' alt="K"/>
                 </div>
               </div>
             </div>
