--- a/index.html
+++ b/index.html
@@ -32,16 +32,21 @@
           <div id="Tennyson" class="producer-div">
             <p id="Tennyson-text" class="producer">Tennyson</p>
           </div>
+          <div id="Custom" class="producer-div">
+            <p id="Custom-text" class="producer">Custom</p>
+          </div>
         </div>
         <main>
           <div class="player">
             <h1 id="producer-title">Oliver Samples</h1>
-            <div class="block center-div">
+            <div id="presets" class="block center-div">
               <select class="loops select">
                 <option class="option" value="Loop 1">Loop 1</option>
                 <option class="option" value="Loop 2">Loop 2</option>
                 <option class="option" value="Loop 3">Loop 3</option>
               </select>
+            </div>
+            <div id="handlebar-uploads" class="block center-div">
             </div>
             <div class="block range">
               <label for="volume">Volume</label>
@@ -131,6 +136,18 @@
                   <img id="l" class="key" src='public/Key3.png' alt="K"/>
                 </div>
               </div>
+            </div>
+            <div class="upload-div block">
+              <form enctype="multipart/form-data" id="sound-uploader">
+                <input id="file" name="file" type="file" class="file-upload"/>
+                <label for="file" class="upload-label">Upload Loop</label>
+                <input name="title" placeholder="Sample Name" class="input" type="text"/>
+                <input type="submit" class="submit-btn"/>
+              </form>
+            </div>
+            <div id="sound-display">
+            </div>
+            <div id="handlebar-uploads">
             </div>
           </div>
         </main>
