Replace Point Point with Mr. Bill

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
           </div>
         </nav>
         <div class="nav-left">
+          <div id="MrBill" class="producer-div">
+            <p id="MrBill-text" class="producer selected">Mr. Bill</p>
+          </div>
           <div id="Oliver" class="producer-div">
-            <p id="Oliver-text" class="producer selected">Oliver</p>
+            <p id="Oliver-text" class="producer">Oliver</p>
           </div>
           <div id="Pascaal" class="producer-div">
             <p id="Pascaal-text" class="producer">Pascaal</p>
           </div>
-          <div id="PointPoint" class="producer-div">
-            <p id="PointPoint-text" class="producer">PointPoint</p>
-          </div>
+          <!-- <div id="PointPoint" class="producer-div">
+            <p id="PointPoint-text" class="producer">Point Point</p>
+          </div> -->
           <div id="Tennyson" class="producer-div">
             <p id="Tennyson-text" class="producer">Tennyson</p>
           </div>
@@ -38,7 +41,7 @@
         </div>
         <main>
           <div class="player">
-            <h1 id="producer-title">Oliver Samples</h1>
+            <h1 id="producer-title">Mr. Bill Samples</h1>
             <div id="presets" class="block center-div">
               <select class="loops select">
                 <option class="option" value="Loop 1">Loop 1</option>
