Add loading wheel that disappears when url loads

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                   <img id="f" class="key" src='public/Key3.png' alt="G"/>
                 </div>
               </div>
+              <div class="loader">
+                <div class="outer"></div>
+                <div class="middle"></div>
+                <div class="inner"></div>
+              </div>
               <div class="key-row">
                 <div class="key-div">
                   <span class="letter">J</span>
@@ -140,6 +145,11 @@
                 </div>
               </div>
             </div>
+            <!-- <div class="loader">
+              <div class="outer"></div>
+              <div class="middle"></div>
+              <div class="inner"></div>
+            </div> -->
             <div class="upload-div block">
               <form enctype="multipart/form-data" id="sound-uploader">
                 <input id="file" name="file" type="file" class="file-upload input-width"/>
@@ -150,6 +160,11 @@
                 <input type="submit" class="submit-btn"/>
               </form>
             </div>
+            <!-- <div class="loader">
+              <div class="outer"></div>
+              <div class="middle"></div>
+              <div class="inner"></div>
+            </div> -->
             <div id="sound-display">
             </div>
             <div id="handlebar-uploads">
