Change Sample name to loop name

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <form enctype="multipart/form-data" id="sound-uploader">
                 <input id="file" name="file" type="file" class="file-upload input-width"/>
                 <label for="file" class="upload-label">Upload Loop</label>
-                <input name="title" placeholder="Sample Name" class="input input-width" type="text"/>
+                <input name="title" placeholder="Loop Name" class="input input-width" type="text"/>
                 <!-- <input id="is-loop" type="radio" value="isLoop" class="radio">Loop</input>
                 <input id="not-loop" type="radio" value="notLoop" class="radio">Not Loop</input> -->
                 <input type="submit" class="submit-btn"/>
