Add Torres and Rengifo Samples

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </div>
         </nav>
         <div class="nav-left">
-          <div id="MrBill" class="producer-div">
-            <p id="MrBill-text" class="producer selected">Mr. Bill</p>
+          <div id="Mr-Bill" class="producer-div">
+            <p id="Mr-Bill-text" class="producer selected">Mr. Bill</p>
           </div>
           <div id="Oliver" class="producer-div">
             <p id="Oliver-text" class="producer">Oliver</p>
@@ -34,6 +34,9 @@
           </div> -->
           <div id="Tennyson" class="producer-div">
             <p id="Tennyson-text" class="producer">Tennyson</p>
+          </div>
+          <div id="Torres-Rengifo" class="producer-div">
+            <p id="Torres-Rengifo-text" class="producer">Torres/Rengifo</p>
           </div>
           <div id="Custom" class="producer-div">
             <p id="Custom-text" class="producer">Custom</p>
